--- a/app/client/css/dashboard.css
+++ b/app/client/css/dashboard.css
@@ -2,6 +2,10 @@ body {
     background-color: #F5F5F5;
 }
 
+#dashboard-title {
+    padding: 50px;
+}
+
 .cook-profile-container {
     overflow: hidden;
     /*height: 200px;*/
